--- a/application/admin/view/admin_user/index.html
+++ b/application/admin/view/admin_user/index.html
@@ -57,7 +57,7 @@
                 {else /}
                   <button type="button" class="btn btn-primary btn-xs" onclick="edit({$v.id});">编辑</button>
                   <button type="button" class="btn btn-default btn-xs" onclick="del({$v.id});">删除</button>
-                  <button type="button" class="btn btn-danger btn-xs">权限管理</button>
+                  <button type="button" class="btn btn-danger btn-xs" onclick="permissions({$v.id});">权限管理</button>
                 {/if}
                </td>
             </tr>
