--- a/application/admin/view/Layouts/menu.html
+++ b/application/admin/view/Layouts/menu.html
@@ -4,65 +4,28 @@
         <div>
           <ul class="site-menu">
             <li class="site-menu-category">导航</li>
-            <li class="site-menu-item has-sub">
+            <li {if condition="($active eq 'Index')"}class="site-menu-item has-sub active"{else /}class="site-menu-item has-sub"{/if}>
               <a class="animsition-link" href="/admin/Index/index" data-slug="dashboard">
                 <i class="site-menu-icon wb-dashboard" aria-hidden="true"></i>
                 <span class="site-menu-title">首页</span>
-                <!-- <div class="site-menu-badge">
-                  <span class="badge badge-success">2</span>
-                </div> -->
               </a>
             </li>
-            <!-- <li class="site-menu-item has-sub active open">
-              <a href="javascript:void(0)" data-slug="layout">
-                <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
-                <span class="site-menu-title">Layouts</span>
-                <span class="site-menu-arrow"></span>
-              </a>
-              <ul class="site-menu-sub">
-                <li class="site-menu-item">
-                  <a class="animsition-link" href="javascript:;" data-slug="layout-menu-collapsed">
-                    <i class="site-menu-icon " aria-hidden="true"></i>
-                    <span class="site-menu-title">Menu Collapsed</span>
-                  </a>
-                </li>
-              </ul>
-            </li> -->
-            <li class="site-menu-item has-sub active open">
-              <a href="javascript:void(0)" data-slug="layout">
-                <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
-                <span class="site-menu-title">用户管理</span>
-                <span class="site-menu-arrow"></span>
-              </a>
-              <ul class="site-menu-sub">
-                <li class="site-menu-item">
-                  <a class="animsition-link" href="/admin/AdminUser/add" data-slug="layout-menu-collapsed">
-                    <i class="site-menu-icon " aria-hidden="true"></i>
-                    <span class="site-menu-title">添加用户</span>
-                  </a>
-                </li>
-                <li class="site-menu-item">
-                  <a class="animsition-link" href="/admin/AdminUser/index" data-slug="layout-menu-collapsed">
-                    <i class="site-menu-icon " aria-hidden="true"></i>
-                    <span class="site-menu-title">用户列表</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'Programa')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">栏目管理</span>
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                {if condition="($Think.session.adminUser.type eq 0)"}
+                <li {if condition="($action eq 'Programa/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/Programa/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加栏目</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                {/if}
+                <li {if condition="($action eq 'Programa/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/Programa/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">栏目列表</span>
@@ -70,20 +33,42 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            {if condition="($Think.session.adminUser.type eq 0)"}
+            <li {if condition="($active eq 'AdminUser')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
+              <a href="javascript:void(0)" data-slug="layout">
+                <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
+                <span class="site-menu-title">用户管理</span>
+                <span class="site-menu-arrow"></span>
+              </a>
+              <ul class="site-menu-sub">
+                <li {if condition="($action eq 'AdminUser/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
+                  <a class="animsition-link" href="/admin/AdminUser/add" data-slug="layout-menu-collapsed">
+                    <i class="site-menu-icon " aria-hidden="true"></i>
+                    <span class="site-menu-title">添加用户</span>
+                  </a>
+                </li>
+                <li {if condition="($action eq 'AdminUser/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
+                  <a class="animsition-link" href="/admin/AdminUser/index" data-slug="layout-menu-collapsed">
+                    <i class="site-menu-icon " aria-hidden="true"></i>
+                    <span class="site-menu-title">用户列表</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li {if condition="($active eq 'Banner')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">Banner管理</span>
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'Banner/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/Banner/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加Banner</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'Banner/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/Banner/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">Banner列表</span>
@@ -91,20 +76,20 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'AdForeshow')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">活动预告广告管理</span>
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdForeshow/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdForeshow/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加广告</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdForeshow/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdForeshow/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">广告列表</span>
@@ -112,20 +97,20 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'AdAcademy')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">院校推荐广告管理</span>
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdAcademy/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdAcademy/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加广告</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdAcademy/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdAcademy/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">广告列表</span>
@@ -133,7 +118,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'AdTop')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">顶部广告管理</span>
@@ -154,7 +139,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'AdInformation')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">资讯热线广告管理</span>
@@ -175,7 +160,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'AdAcademyTop')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">院校发布广告管理</span>
@@ -196,7 +181,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'AdExamTop')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">考试资讯广告管理</span>
@@ -217,7 +202,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'AdPartner')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">合作伙伴广告管理</span>
@@ -238,7 +223,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'AdLogo')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">Logo管理</span>
@@ -259,7 +244,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'QrCodePhone')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">手机二维码管理</span>
@@ -280,7 +265,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'QrCodePublic')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">公众号二维码管理</span>
@@ -301,7 +286,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'Blogroll')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">友情链接管理</span>
@@ -322,7 +307,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'AboutUs')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">关于我们管理</span>
@@ -337,7 +322,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'Webstat')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">底部信息管理</span>
@@ -352,7 +337,7 @@
                 </li>
               </ul>
             </li>
-            <li class="site-menu-item has-sub active open">
+            <li {if condition="($active eq 'Website')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">站点管理</span>
@@ -367,6 +352,7 @@
                 </li>
               </ul>
             </li>
+            {/if}
           </ul>
         </div>
       </div>
