--- a/application/admin/view/Layouts/menu.html
+++ b/application/admin/view/Layouts/menu.html
@@ -7,7 +7,7 @@
             <li {if condition="($active eq 'Index')"}class="site-menu-item has-sub active"{else /}class="site-menu-item has-sub"{/if}>
               <a class="animsition-link" href="/admin/Index/index" data-slug="dashboard">
                 <i class="site-menu-icon wb-dashboard" aria-hidden="true"></i>
-                <span class="site-menu-title">首页</span>
+                <span class="site-menu-title">仪表盘</span>
               </a>
             </li>
             <li {if condition="($active eq 'Programa')"}class="site-menu-item has-sub active open"{else /}class="site-menu-item has-sub"{/if}>
@@ -125,13 +125,13 @@
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdTop/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdTop/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加广告</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdTop/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdTop/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">广告列表</span>
@@ -146,13 +146,13 @@
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdInformation/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdInformation/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加广告</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdInformation/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdInformation/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">广告列表</span>
@@ -167,13 +167,13 @@
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdAcademyTop/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdAcademyTop/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加广告</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdAcademyTop/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdAcademyTop/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">广告列表</span>
@@ -188,13 +188,13 @@
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdExamTop/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdExamTop/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加广告</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdExamTop/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdExamTop/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">广告列表</span>
@@ -209,13 +209,13 @@
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdPartner/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdPartner/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加广告</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdPartner/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdPartner/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">广告列表</span>
@@ -230,13 +230,13 @@
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdLogo/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdLogo/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加Logo</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AdLogo/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AdLogo/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">Logo列表</span>
@@ -251,13 +251,13 @@
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'QrCodePhone/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/QrCodePhone/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加二维码</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'QrCodePhone/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/QrCodePhone/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">二维码列表</span>
@@ -272,13 +272,13 @@
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'QrCodePublic/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/QrCodePublic/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加二维码</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'QrCodePublic/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/QrCodePublic/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">二维码列表</span>
@@ -293,13 +293,13 @@
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'Blogroll/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/Blogroll/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加友情链接</span>
                   </a>
                 </li>
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'Blogroll/index')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/Blogroll/index" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">友情链接列表</span>
@@ -314,7 +314,7 @@
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'AboutUs/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/AboutUs/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加关于我们</span>
@@ -329,7 +329,7 @@
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'Webstat/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/Webstat/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">添加底部信息</span>
@@ -344,7 +344,7 @@
                 <span class="site-menu-arrow"></span>
               </a>
               <ul class="site-menu-sub">
-                <li class="site-menu-item">
+                <li {if condition="($action eq 'Website/add')"}class="site-menu-item active"{else /}class="site-menu-item"{/if}>
                   <a class="animsition-link" href="/admin/Website/add" data-slug="layout-menu-collapsed">
                     <i class="site-menu-icon " aria-hidden="true"></i>
                     <span class="site-menu-title">配置站点</span>
