--- a/public/static/index/layouts/css/layouts.css
+++ b/public/static/index/layouts/css/layouts.css
@@ -44,12 +44,12 @@ img{width: 100%;height: 100%;}
 
 .nav-box li a{color: #fff;}
 .nav-box .nav-title{float: left;line-height: 106px;margin-right: 25px;font-size: 16px;font-weight: bold;}
-.nav-box .nav-td{float: left;margin-top: 12px;padding-right: 30px;border-right: 2px solid #459ce3;font-size: 14px;}
+.nav-box .nav-td{float: left;margin: 12px 0;padding-right: 30px;border-right: 2px solid #459ce3;font-size: 14px;min-height: 82px;}
 .nav-box .nav-second .nav-td{width: 230px;}
 .nav-box .nav-third .nav-td{width: 460px;}
 .nav-box .nav-fourth .nav-td{width: 236px;}
 .nav-td li{height: 28px;line-height: 28px;margin-left: 10px;padding: 0;border-bottom: 0;}
-.nav-fourth li{width: 68px;text-align: right;}
+/*.nav-fourth li{width: 68px;text-align: right;}*/
 .nav-second .nav-title,.nav-third .nav-title,.nav-fourth .nav-title{margin-left: 20px;}
 .nav-fourth .nav-td{border-right: 0;padding-right: 0;}
 		/***************头部样式开始  end  *********************/
