--- a/application/admin/view/Index/index.html
+++ b/application/admin/view/Index/index.html
@@ -21,7 +21,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.website_pvCount}</span>
                       <span class="counter-number-related text-capitalize">次</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"访问量"</div>
@@ -40,7 +40,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.programaCount}</span>
                       <span class="counter-number-related text-capitalize">个</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"栏目"</div>
@@ -59,7 +59,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.programa_articleCount}</span>
                       <span class="counter-number-related text-capitalize">篇</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"栏目文章"</div>
@@ -78,7 +78,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.admin_userCount}</span>
                       <span class="counter-number-related text-capitalize">个</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"后台用户"</div>
@@ -97,7 +97,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.bannerCount}</span>
                       <span class="counter-number-related text-capitalize">张</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"Banner广告图片"</div>
@@ -116,7 +116,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.ad_foreshowCount}</span>
                       <span class="counter-number-related text-capitalize">张</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"活动预告广告图片"</div>
@@ -135,7 +135,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.ad_academyCount}</span>
                       <span class="counter-number-related text-capitalize">张</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"院校推荐广告图片"</div>
@@ -154,7 +154,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.ad_topCount}</span>
                       <span class="counter-number-related text-capitalize">张</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"顶部广告图片"</div>
@@ -173,7 +173,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.ad_informationCount}</span>
                       <span class="counter-number-related text-capitalize">张</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"资讯热线广告图片"</div>
@@ -192,7 +192,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.ad_academy_topCount}</span>
                       <span class="counter-number-related text-capitalize">张</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"院校发布广告图片"</div>
@@ -211,7 +211,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.ad_exam_topCount}</span>
                       <span class="counter-number-related text-capitalize">张</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"考试资讯广告图片"</div>
@@ -230,7 +230,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.ad_partnerCount}</span>
                       <span class="counter-number-related text-capitalize">张</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"合作伙伴广告图片"</div>
@@ -249,7 +249,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.ad_logoCount}</span>
                       <span class="counter-number-related text-capitalize">张</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"Logo图片"</div>
@@ -268,26 +268,7 @@
                   </div>
                   <div class="counter counter-md counter text-right pull-right">
                     <div class="counter-number-group">
-                      <span class="counter-number">25</span>
-                      <span class="counter-number-related text-capitalize">张</span>
-                    </div>
-                    <div class="counter-label text-capitalize font-size-16">"手机二维码广告图片"</div>
-                  </div>
-                </div>
-              </div>
-              <!-- End Widget -->
-            </div>
-
-            <div class="col-md-4">
-              <!-- Widget -->
-              <div class="widget">
-                <div class="widget-content padding-35 bg-white clearfix">
-                  <div class="pull-left white">
-                    <i class="icon icon-circle icon-2x wb-clipboard bg-red-600" aria-hidden="true"></i>
-                  </div>
-                  <div class="counter counter-md counter text-right pull-right">
-                    <div class="counter-number-group">
-                      <span class="counter-number">25</span>
+                      <span class="counter-number">{$data.blogrollCount}</span>
                       <span class="counter-number-related text-capitalize">个</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">"友情链接"</div>
