--- a/application/index/view/Message/message.html
+++ b/application/index/view/Message/message.html
@@ -12,35 +12,25 @@
 	<!-- 左边列表样式 -->
 	<div class="left_aside lt">
 		<div class="item_bd" id="items_list">
+			{if $data.programa_articleData}
+			{foreach name="data.programa_articleData" item="v" key="k"}
+			<div class="item_list">
+				<div class="item_list_img lt">
+					<img src="{$v.cover_path}">
+				</div>
+				<div class="item_list_con rt">
+					<h2><a href="/websitewap/websitewap/paid/{$v.id}">{$v.title}</a></h2>
+					<p>
+						<a href="/websitewap/websitewap/paid/{$v.id}">{$v.tips}</a>
+					</p>
+					<p class="item_list_con_time">
+						<span>发布时间 ： {$v.ctime}</span>
+					</p>
+				</div>
+			</div>
+			{/foreach}
+			{/if}
 
-			<div class="item_list">
-				<div class="item_list_img lt">
-					<img src="/static/images/banner.png">
-				</div>
-				<div class="item_list_con rt">
-					<h2><a href="#">中国地质大学(武汉)2018年接收推免生章程</a></h2>
-					<p>
-						<a href="#">为做好接收2018年推免生工作，加强科学选拔，规范工作程序，保证公平公正，根据教育部有关推免生工作管理办法，结合我校实际，制定本章程。<br>一、接收专业、人数及学制1. 2018年我校在理、工、文、管、经、法、教、哲、艺9个学科门类的51个学术学位专业和资产评估、法律、翻译、工程、艺术、体育6个专业学位类别。</a>
-					</p>
-					<p class="item_list_con_time">
-						<span>发布时间 ： 2017-09-06 16:14:02</span>
-					</p>
-				</div>
-			</div>
-			<div class="item_list">
-				<div class="item_list_img lt">
-					<img src="/static/images/banner.png">
-				</div>
-				<div class="item_list_con rt">
-					<h2><a href="#">中国地质大学(武汉)2018年接收推免生章程</a></h2>
-					<p>
-						<a href="#">为做好接收2018年推免生工作，加强科学选拔，规范工作程序，保证公平公正，根据教育部有关推免生工作管理办法，结合我校实际，制定本章程。<br>一、接收专业、人数及学制1. 2018年我校在理、工、文、管、经、法、教、哲、艺9个学科门类的51个学术学位专业和资产评估、法律、翻译、工程、艺术、体育6个专业学位类别。</a>
-					</p>
-					<p class="item_list_con_time">
-						<span>发布时间 ： 2017-09-06 16:14:02</span>
-					</p>
-				</div>
-			</div>
 			<div class="liem_bd textC ">
 				<ul class="pagination">
 				    <li><a href="#">&laquo;</a></li>
