--- a/application/index/view/Layouts/footer.html
+++ b/application/index/view/Layouts/footer.html
@@ -8,41 +8,26 @@
                     <div class="third_header">
                             <h3>友情链接</h3>
                         </div>
-                    {if $data.webstatData}
-                    <div class="main_footer_bottom">
-                        {$data.webstatData.content}
+                    {if $data.blogrollData}
+                    <div class="main_footer_bottom last_span">
+                       <p> 
+                        {foreach name="data.blogrollData" item="v" key="k"}
+                        <a href="{$v.cname_link}">{$v.cname}</a> <span>-</span>
+                        {/foreach}
+                        </p>
                     </div>
                     {/if}
                 </div>
-            </div>
                 <!-- 底部链接 -->
-        <div class="main_footer_bottom">
-            <p>
-                <a href="#">重庆大学MBA</a>-
-                <a href="#">重庆工商大学MBA</a>-
-                <a href="#">西南大学MBA</a>-
-                <a href="#">重庆师范大学MBA</a>-
-                <a href="#">重庆理工大学MBA</a>-
-                <a href="#">报名</a>-
-                <a href="#">备考</a>-
-                <a href="#">考试</a>-
-                <a href="#">复习</a>-
-                <a href="#">复试</a>-
-                <a href="#">关于我我们</a>
-            </p>
-            <p>
-                <a href="/index/Websitewap/index">网站导航</a>-
-                <a href="#">重庆MBA招生考试服务平台</a>-
-                <a href="#">重庆招生考试网cqmba.org版权所有</a>-
-                <a href="#">地址：重庆市沙坪坝科技园7楼</a>
-            </p>
-            <p>
-                <a href="#">渝ICP备16011631号-5</a>-
-                <a href="#">广告投放：023-81686224</a>-
-                <a href="#">客服邮箱：kefu@mba.orgbeian.png</a>-
-                <a href="#">渝公网安备 50010602500870号</a>
-            </p>
-        </div>
+                {if $data.webstatData}
+                    <div class="main_footer_bottom">
+                        {$data.webstatData.content}
+                    </div>
+                {/if}
+
+            </div>
+           
+    
     </div>
 </div> 
 
