--- a/application/index/view/Layouts/header.html
+++ b/application/index/view/Layouts/header.html
@@ -7,7 +7,7 @@
     <meta  name="description" content="重庆MBA招生考试服务平台">
     <meta name="keywords" content="MBA 考研">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <!-- Bootstrap -->
     {css href="/static/bootstrap/css/bootstrap.min.css" /}
     <!-- Bootstrap验证插件 -->
@@ -26,19 +26,17 @@
     {css href="/static/index/layouts/css/layouts.css" /}
 
   </head>
-  <body>    
+  <body>
 <div class="header">
     <!-- 顶部通用栏 一 -->
     <div class="top-nav-wrapper">
         <div class="top-nav-index">
             <div class="top-list top-list_left">
-                <a href="#" target="_blank" title="#">重庆MBA招生考试服务平台</a>
-                <a href="#" target="_blank" title="#">务平台</a>
-                <a href="#" target="_blank" title="#">重庆MBA招生考</a>
-                <a href="#" target="_blank" title="#">重庆MBA院校信息发布平台</a>
+                <a href="#" target="_blank" title="#">关于我们</a>
+                <a href="#" target="_blank" title="#">网站导航</a>
             </div>
             <div class="top-list textR">
-                <a href="/websitewap/websitewap" title="#">院校登陆</a>
+                <a href="#" title="#">院校登陆</a>
                 <a href="#" id="favorites" title="#">加入收藏</a>
             </div>
         </div>
@@ -83,10 +81,10 @@
                                     {foreach name="data.programaData" item="v" key="k"}
                                      {if condition="($v.type == 0)"}
                                         {foreach name="$v.programaSonData" item="vv" key="kk"}
-                                    <li><a href="/message/message?pid/{$vv.id}">{$vv.cname}</a></li>
+                                    <li><a href="/message/message?pid={$vv.id}">{$vv.cname}</a></li>
                                         {/foreach}
                                      {/if}
-                                    {/foreach}   
+                                    {/foreach}
                                 {/if}
                             </ul>
                         </div>
@@ -99,10 +97,10 @@
                                     {foreach name="data.programaData" item="v" key="k"}
                                      {if condition="($v.type == 1)"}
                                         {foreach name="$v.programaSonData" item="vv" key="kk"}
-                                    <li><a href="/message/message?pid/{$vv.id}">{$vv.cname}</a></li>
+                                    <li><a href="/message/message?pid={$vv.id}">{$vv.cname}</a></li>
                                         {/foreach}
                                      {/if}
-                                    {/foreach}   
+                                    {/foreach}
                                 {/if}
                         </ul>
                     </div>
@@ -117,13 +115,13 @@
                                 <li><a href="/message/message?pid/{$vv.id}">{$vv.cname}</a></li>
                                     {/foreach}
                                  {/if}
-                                {/foreach}   
+                                {/foreach}
                             {/if}
                     </ul>
                 </li>
             </ul>
-            
+
         </nav>
-    
+
 </div>
 
