--- a/public/static/index/layouts/css/layouts.css
+++ b/public/static/index/layouts/css/layouts.css
@@ -76,3 +76,4 @@ img{width: 100%;height: 100%;}
 
 /*主体宽度*/
 .container{width: 1250px;margin: 0 auto;}
+div.last_span  span:last-child {display: none;}
