--- a/application/index/view/Layouts/header.html
+++ b/application/index/view/Layouts/header.html
@@ -32,11 +32,11 @@
     <div class="top-nav-wrapper">
         <div class="top-nav-index">
             <div class="top-list top-list_left">
-                <a href="#" target="_blank" title="#">关于我们</a>
-                <a href="#" target="_blank" title="#">网站导航</a>
+                <a href="/Base/aboutUs" target="_blank" >关于我们</a>
+                <a href="/Base/sitemap" target="_blank" >网站导航</a>
             </div>
             <div class="top-list textR">
-                <a href="#" title="#">院校登陆</a>
+                <a href="/admin" title="院校登录" target="_blank">院校登陆</a>
                 <a href="#" id="favorites" title="#">加入收藏</a>
             </div>
         </div>
@@ -60,8 +60,10 @@
                 </div>
                 <!-- 搜索框 -->
                 <div class="header-index-search lt">
-                    <input type="text" name="keywords" id="keywords" placeholder="站内搜索" maxlength="40">
-                    <button type="submit" class="search_btn" id="searchBtn"><i class="glyphicon glyphicon-search" title="站内搜索"></i></button>
+                    <form action="/Base/search" method="POST">
+                        <input type="text" name="search" id="keywords" placeholder="站内搜索" maxlength="40">
+                        <button type="submit" class="search_btn" id="searchBtn"><i class="glyphicon glyphicon-search" title="站内搜索"></i></button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -112,7 +114,7 @@
                                 {foreach name="data.programaData" item="v" key="k"}
                                  {if condition="($v.type == 2)"}
                                     {foreach name="$v.programaSonData" item="vv" key="kk"}
-                                <li><a href="/message/message?pid/{$vv.id}">{$vv.cname}</a></li>
+                                <li><a href="/message/message?pid={$vv.id}">{$vv.cname}</a></li>
                                     {/foreach}
                                  {/if}
                                 {/foreach}
