--- a/application/index/view/Layouts/right_aside.html
+++ b/application/index/view/Layouts/right_aside.html
@@ -13,7 +13,7 @@
 						{if condition="($k == 4)"}
 					<div class="oneBox_title">
 						<span class="oneBox_title_bd">{$v.cname}</span>
-						<a href="/message/message?pid/{$v.id}" class="rt">更多></a>
+						<a href="/message/message?pid={$v.id}" class="rt">更多></a>
 					</div>
 					{/if}
 					{/foreach}
@@ -23,7 +23,7 @@
 							{foreach name="data.announcementData" item="v" key="k"}
 							<div class="oneBox_body_list">
 								<div class="yd">·</div>
-								<div class="oneBox_body_list_bd"><a href="/websitewap/websitewap?paid/{$v.id}">{$v.title}</a></div>
+								<div class="oneBox_body_list_bd"><a href="/websitewap/websitewap?paid={$v.id}">{$v.title}</a></div>
 							</div>
 							{/foreach}
 							{/if}
@@ -78,7 +78,7 @@
 							{if condition="($k == 6)"}
 						<div class="oneBox_title">
 							<span class="oneBox_title_bd">{$v.cname}</span>
-							<a href="/message/message?pid/{$v.id}" class="rt">更多></a>
+							<a href="/message/message?pid={$v.id}" class="rt">更多></a>
 						</div>
 						{/if}
 						{/foreach}
@@ -88,7 +88,7 @@
 							{foreach name="data.recommendData" item="v" key="k"}
 							<div class="oneBox_body_list">
 								<div class="yd">·</div>
-								<div class="oneBox_body_list_bd"><a href="/websitewap/websitewap?paid/{$v.id}">{$v.title}</a></div>
+								<div class="oneBox_body_list_bd"><a href="/websitewap/websitewap?paid={$v.id}">{$v.title}</a></div>
 							</div>
 							{/foreach}
 							{/if}
